Update readme and host names

--- a/kubernetes/minikube-ingress.yaml
+++ b/kubernetes/minikube-ingress.yaml
@@ -12,7 +12,7 @@ spec:
         backend:
           serviceName: helloworld
           servicePort: 80
-  - host: auth.inspections.test
+  - host: auth.books.test
     http:
       paths:
       - path: /
